# Vulkan-Samples-Dictionary

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeFuncSupport/: CMakeUtil.cmake
Compute/: CMakeLists.txt
Compute/MatrixMultiply/: CMakeLists.txt  MatrixMul.comp  main.cpp
DDN/: InputHandler.md
DebugSamples/: CMakeLists.txt
NormalSamples/: CMakeLists.txt
NormalSamples/1-01_DebugMessenger/: CMakeLists.txt  main.cpp
Samples/1-01_InitInstance/DebugSample/: main.cpp
Samples/1-04_InitCommandBuffer/ReleaseSample/: CMakeLists.txt  main.cpp
Samples/1-06_InitColorBuffer/: README.md
Samples/1-15_InitPipeline/ReleaseSample/: CMakeLists.txt
Samples/2-03_DumpTriRT/: notes.txt
Samples/2-04_DumpQuad/DebugSample/: CMakeLists.txt  DumpQuad.vert.spv  DumpQuad_vert.spv  main.cpp
Samples/2-04_DumpQuad/DebugSample/glsl/: DumpQuad.vert
Samples/2-04_QtHelloWindow/ReleaseSample/: CMakeLists.txt
Samples/2-07_GlfwTri/: README.md
Samples/2-07_GlfwTri/DebugSample/: CMakeLists.txt  main.cpp
Samples/2-07_RealTimeTri/DebugSample/: CMakeLists.txt  main.cpp
Samples/2-09_DockImgTemplate/DebugSample/: CMakeLists.txt  main.cpp
Samples/2-11_UniformBufferTri/: notes.txt
Samples/2-11_UniformBufferTri/DebugSample/: CMakeLists.txt  DumpTri.frag.spv  UniformBufTri.frag  UniformBufTri.vert  UniformBufTri.vert.spv  main.cpp
Samples/2-14_HDRI/: notes.txt
Samples/2-14_HDRITexture/: DownloadData.py  notes.txt
Samples/2-14_HDRITexture/DebugSample/: CMakeLists.txt  main.cpp  vert.spv
Samples/2-14_HDRITexture/DebugSample/glsl/: glsl.frag  glsl.vert
Samples/2-15_CubeMap/: notes.txt
Samples/2-15_CubeMap/DebugSample/: CMakeLists.txt  main.cpp  vert.spv
Samples/2-15_CubeMap/DebugSample/glsl/: glsl.frag  glsl.vert
Samples/2-17_DrawIndirect/: notes.txt
Samples/2-17_DrawIndirect/DebugSample/: CMakeLists.txt  main.cpp
Samples/2-17_DrawIndirect/DebugSample/hlsl/: tri_frag.hlsl  tri_frag.spv  tri_vert.hlsl  tri_vert.spv
Samples/2-18_MeshShaderTri/: README.md  notes.txt
Samples/2-18_MeshShaderTri/DebugSample/: CMakeLists.txt  main.cpp
Samples/2-18_MeshShaderTri/DebugSample/glsl/: tri.frag  tri.mesh
Samples/2-18_TaskMeshShader/: notes.txt
Samples/3-00_SharedLibrary/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Event.h  MathUtils.cpp  MathUtils.h  Pipeline.cpp  Pipeline.h  VulkanDbgUtils.h
Samples/3-01_PBRBaisc/: notes.txt
Samples/3-01_PBRBasic/: DownloadData.py  notes.txt
Samples/3-01_PBRBasic/DebugSample/: CMakeLists.txt  PBRBasicApp.cpp  PBRBasicApp.h  main.cpp  sphere_frag.spv
Samples/3-01_PBRBasic/DebugSample/glsl/: sphere.frag  sphere.vert
Samples/3-01_PBRBasic/DebugSample/hlsl/: sphere_frag.hlsl  sphere_frag.spv  sphere_vert.spv
Samples/3-01_PBREnivBasic/: notes.txt
Samples/3-02_PBRIBL/: DownloadData.py  notes.txt
Samples/3-03_PBRIBLGltf/: notes.txt
Samples/3-04_SkeletonSkinGltf/: notes.txt
Samples/3-05_PBRDeferredRender/: notes.txt
Samples/3-05_PBRIBLGltfDeferedRender/: notes.txt
Samples/3-06_SSAO/: note.txt
Samples/4-01_ReSTIR/DebugSample/: CMakeLists.txt
Samples/4-01_SSAO/: note.txt
Samples/4-01_SSAO/DebugSample/: CMakeLists.txt  SSAOApp.cpp  SSAOApp.h  main.cpp
Samples/4-01_SSAO/DebugSample/hlsl/: ambient_lighting_frag.hlsl  ambient_lighting_frag.spv  ambient_lighting_vert.hlsl  geo_frag.hlsl  geo_frag.spv  geo_vert.hlsl  geo_vert.spv  lighting_vert.spv  point_lighting_frag.hlsl  point_lighting_vert.hlsl  screen_quad_vert.hlsl  screen_quad_vert.spv
Samples/4-03_Nanite/: notes.txt
Samples/4-04_MeshShaderProceduralGrass/: notes.txt
SharedLibrary/: CMakeLists.txt  README.md
SharedLibrary/Actor/: Actor.h  CMakeLists.txt
SharedLibrary/AnimLogger/: AnimLogger.cpp  AnimLogger.h  CMakeLists.txt
SharedLibrary/Application/: Application.cpp  Application.h  DearImGuiApplication.cpp  DearImGuiApplication.h  GlfwApplication.cpp  GlfwApplication.h
SharedLibrary/AssetsLoader/: AssetsLoader.cpp  AssetsLoader.h  CMakeLists.txt
SharedLibrary/Camera/: CMakeLists.txt  Camera.cpp  Camera.h
SharedLibrary/DDN/: 01_SharedLibraryDesign.md
SharedLibrary/Event/: CMakeLists.txt  Event.cpp
SharedLibrary/HLSL/: GGXModel.hlsl  HLSLCompile.py  cubemapFormat_frag.hlsl  cubemapFormat_frag.spv  cubemapFormat_vert.hlsl  g_cubemapFormat_frag.h  g_cubemapFormat_vert.h  g_gammaCorrection_frag.h  g_gammaCorrection_vert.h  gammaCorrection_frag.hlsl  gammaCorrection_frag.spv  gammaCorrection_vert.hlsl
SharedLibrary/Pipeline/: CMakeLists.txt  Pipeline.cpp  Pipeline.h
SharedLibrary/Scene/: CMakeLists.txt  Level.cpp  Level.h
SharedLibrary/Utils/: AppUtils.cpp  AppUtils.h  CMakeLists.txt  CmdBufUtils.cpp  CmdBufUtils.h  DiskOpsUtils.cpp  DiskOpsUtils.h  GltfUtils.cpp  GltfUtils.h  GpuRsrc.h  MathUtils.cpp  MathUtils.h  StrPathUtils.cpp  StrPathUtils.h  VulkanDbgUtils.h
ThirdPartyLibs/hdrloader/: hdrloader.h
Tools/: EnvCheck.bat  GenerateShaderHeader.py
Tools/GenIBL/: CMakeLists.txt  GenIBL.cpp  GenIBL.h  GenIBLDiffuseIrradiance.cpp  GenIBLEnvBrdf.cpp  GenIBLPrefilterEnvMap.cpp  README.md  main.cpp  notes.txt
Tools/GenIBL/hlsl/: diffuseIrradiance_frag.hlsl  diffuseIrradiance_frag.spv  diffuseIrradiance_vert.spv  envBrdf_frag.hlsl  envBrdf_frag.spv  envBrdf_vert.hlsl  envBrdf_vert.spv  g_diffuseIrradiance_frag.h  g_diffuseIrradiance_vert.h  g_envBrdf_frag.h  g_envBrdf_vert.h  g_prefilterEnvMap_frag.h  g_prefilterEnvMap_vert.h  prefilterEnvMap_frag.hlsl  prefilterEnvMap_frag.spv  prefilterEnvMap_vert.hlsl  prefilterEnvMap_vert.spv  skybox_vert.hlsl
Tools/SphericalToCubemap/: CMakeLists.txt  CubeMapFormat_frag.spv  CubeMapFormat_vert.spv  DDN.md  README.md  SphericalToCubemap.cpp  SphericalToCubemap.h  ToCubeMap_frag.spv  ToCubeMap_vert.spv  g_toCubeMap_frag.h  main.cpp
Tools/SphericalToCubemap/glsl/: CubeMapFormat.frag  CubeMapFormat.vert  ToCubeMap.frag
Tools/SphericalToCubemap/hlsl/: g_toCubeMap_vert.h  toCubeMap_frag.hlsl  toCubeMap_vert.hlsl
docs/source/: conf.py  configureProj.rst  entryLevelIndex.rst  index.rst  indexWithoutContents.rst  midLevelIndex.rst  upperLevelIndex.rst
(+218 files in other folders)
